--- a/admin/user.html
+++ b/admin/user.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="icon" type="image/png" href="../img/ryicon.jpg" />
-    <title>BookStore - Quản lý khách hàng</title>
+    <title>CakeZone - Quản lý khách hàng</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -360,11 +360,38 @@
         background-color: #43a047;
         /* xanh lá nhạt */
       }
+      /* ==== Sidebar hover ==== */
+      aside ul li a:hover,
+      aside li a:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+        transition: background-color 0.2s ease;
+        color: white;
+      }
+
+      .logout-btn {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        background: linear-gradient(195deg, #202021, #202021);
+        color: white;
+        padding: 0.75rem 1rem;
+        font-size: 0.875rem;
+        border-radius: 0.25rem;
+        text-decoration: none;
+        width: 100%;
+        margin: 0 auto;
+        transition: all 0.3s ease;
+      }
+
+      .logout-btn:hover {
+        background: linear-gradient(195deg, #2c2c2e, #2c2c2e);
+        cursor: pointer;
+      }
     </style>
   </head>
 
   <body>
-    <!-- SIDEBAR (Giữ nguyên như index.html) -->
+    <!-- SIDEBAR -->
     <aside
       style="
         position: fixed;
@@ -373,349 +400,173 @@
         z-index: 1000;
         width: 250px;
         height: 100vh;
-        background: linear-gradient(195deg, #2b2825, #2b2825);
+        background: linear-gradient(195deg, #202021, #202021);
         color: white;
-        transition: all 0.3s ease;
-        box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.15);
+        box-shadow: 0 0 2rem rgba(0, 0, 0, 0.15);
       "
-      id="sidenav-main"
     >
       <div style="padding: 1.5em 1rem">
         <a
-          href="../pages/loggedin.html"
-          target="_blank"
+          href="#"
           style="
             display: flex;
             align-items: center;
-            font-weight: 600;
+            font-weight: 700;
             color: white;
             text-decoration: none;
           "
         >
-          <span style="margin-left: 0.25rem; font-weight: 700">CAKE ZONE</span>
+          <span>CAKEZONE ADMIN</span>
         </a>
       </div>
       <hr
-        style="
-          width: 100%;
-          border: none;
-          border-top: 1px solid rgba(255, 255, 255, 0.1);
-          margin: 1rem 0;
-        "
+        style="border-top: 1px solid rgba(255, 255, 255, 0.1); margin: 1rem 0"
       />
-      <div style="width: 100%; overflow-y: auto; height: 75vh">
-        <ul style="list-style: none; padding: 0; margin: 0">
-          <li style="margin: 0.25rem 0">
-            <a
-              href="index.html"
-              style="
-                display: flex;
-                align-items: center;
-                padding: 0.75rem 1rem;
-                color: white;
-                border-radius: 0.375rem;
-                text-decoration: none;
-                box-shadow: 0 4px 20px rgba(0, 0, 0, 0.14),
-                  0 7px 10px -5px rgba(233, 30, 99, 0.4);
-              "
-            >
-              <i
-                class="material-icons"
-                style="font-size: 20px; margin-right: 10px"
-                >dashboard</i
-              >
-              Tổng quan
-            </a>
-          </li>
+      <ul style="list-style: none; padding: 0; margin: 0">
+        <li>
+          <a
+            href="index.html"
+            style="
+              display: flex;
+              align-items: center;
+              padding: 0.75rem 1rem;
+              color: white;
+              text-decoration: none;
+              
+            "
+            ><i class="material-icons" style="margin-right: 10px"></i>Tổng
+            quan</a
+          >
+        </li>
+        <li>
+          <a
+            href="user.html"
+            style="
+              display: flex;
+              align-items: center;
+              padding: 0.75rem 1rem;
+              color: white;
+              text-decoration: none;
+              background: linear-gradient(195deg, #e88f2a, #e88f2a);
+              box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2),
+            0 7px 10px -5px rgba(240, 163, 74, 0.6);
 
-          <!-- Quản lý khách hàng có submenu -->
-          <li style="margin: 0.25rem 0">
-            <a
-              href="javascript:void(0);"
-              onclick="toggleSubMenu()"
-              style="
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                padding: 0.75rem 1rem;
-                color: white;
-                border-radius: 0.375rem;
-                text-decoration: none;
-              "
-            >
-              <span style="display: flex; align-items: center">
-                <i
-                  class="material-icons"
-                  style="font-size: 20px; margin-right: 10px"
-                  >weekend</i
-                >
-                Khách hàng
-              </span>
-              <i
-                class="material-icons"
-                id="submenu-arrow"
-                style="font-size: 18px; transition: transform 0.3s"
-                >expand_more</i
-              >
-            </a>
-            <ul
-              id="submenu"
-              style="
-                list-style: none;
-                padding-left: 2rem;
-                margin: 0;
-                display: none;
-              "
-            >
-              <li style="margin: 0.25rem 0">
-                <a
-                  href="user.html"
-                  style="
-                    display: block;
-                    padding: 0.5rem 0.75rem;
-                    color: white;
-                    border-radius: 0.375rem;
-                    text-decoration: none;
-                    background: linear-gradient(195deg, #e88f2a, #e88f2a);
-                  "
-                  >Danh sách khách hàng</a
-                >
-              </li>
-              <li style="margin: 0.25rem 0">
-                <a
-                  href="order.html"
-                  style="
-                    display: block;
-                    padding: 0.5rem 0.75rem;
-                    color: white;
-                    border-radius: 0.375rem;
-                    text-decoration: none;
-                  "
-                  >Quản lý đơn hàng</a
-                >
-              </li>
-            </ul>
-          </li>
+            "
+            ><i class="material-icons" style="margin-right: 10px"></i>Quản
+            lý khách hàng</a
+          >
+        </li>
+        <li>
+          <a
+            href="chef.html"
+            style="
+              display: flex;
+              align-items: center;
+              padding: 0.75rem 1rem;
+              color: white;
+              text-decoration: none;
+            "
+            ><i class="material-icons" style="margin-right: 10px"></i>Quản
+            lý đầu bếp</a
+          >
+        </li>
+        <li>
+          <a
+            href="products.html"
+            style="
+              display: flex;
+              align-items: center;
+              padding: 0.75rem 1rem;
+              color: white;
+              text-decoration: none;
+            "
+            ><i class="material-icons" style="margin-right: 10px"></i
+            >Quản lý sản phẩm</a
+          >
+        </li>
+        <li>
+          <a
+            href="order.html"
+            style="
+              display: flex;
+              align-items: center;
+              padding: 0.75rem 1rem;
+              color: white;
+              text-decoration: none;
+            "
+            ><i class="material-icons" style="margin-right: 10px"></i
+            >Quản lý đơn hàng</a
+          >
+        </li>
+        
+        <li>
+          <a
+            href="category.html"
+            style="
+              display: flex;
+              align-items: center;
+              padding: 0.75rem 1rem;
+              color: white;
+              text-decoration: none;
+            "
+            ><i class="material-icons" style="margin-right: 10px"></i
+            >Quản lý danh mục</a
+          >
+        </li>
+        <li>
+          <a
+            href="phieunhap.html"
+            style="
+              display: flex;
+              align-items: center;
+              padding: 0.75rem 1rem;
+              color: white;
+              text-decoration: none;
+            "
+            ><i class="material-icons" style="margin-right: 10px"></i
+            >Quản lý nhập hàng</a
+          >
+        </li>
+        <li>
+          <a
+            href="giaban.html"
+            style="
+              display: flex;
+              align-items: center;
+              padding: 0.75rem 1rem;
+              color: white;
+              text-decoration: none;
+            "
+            ><i class="material-icons" style="margin-right: 10px"></i>Quản lý giá bán</a
+          >
+        </li>
+        <li>
+          <a
+            href="tonkho.html"
+            style="
+              display: flex;
+              align-items: center;
+              padding: 0.75rem 1rem;
+              color: white;
+              text-decoration: none;
+            "
+            ><i class="material-icons" style="margin-right: 10px"></i
+            >Quản lý tồn kho</a
+          >
+        </li>
 
-          <!-- Quản lý sản phẩm có submenu -->
-          <li style="margin: 0.25rem 0">
-            <a
-              href="javascript:void(0);"
-              onclick="toggleSubMenu('product-submenu', 'product-arrow')"
-              style="
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                padding: 0.75rem 1rem;
-                color: white;
-                border-radius: 0.375rem;
-                text-decoration: none;
-              "
-            >
-              <span style="display: flex; align-items: center">
-                <i
-                  class="material-icons"
-                  style="font-size: 20px; margin-right: 10px"
-                  >table_view</i
-                >
-                Sản phẩm
-              </span>
-              <i
-                class="material-icons"
-                id="product-arrow"
-                style="font-size: 18px; transition: transform 0.3s"
-                >expand_more</i
-              >
-            </a>
-
-            <ul
-              id="product-submenu"
-              style="
-                list-style: none;
-                padding-left: 2rem;
-                margin: 0;
-                display: none;
-              "
-            >
-              <li style="margin: 0.25rem 0">
-                <a
-                  href="products.html"
-                  style="
-                    display: block;
-                    padding: 0.5rem 0.75rem;
-                    color: white;
-                    border-radius: 0.375rem;
-                    text-decoration: none;
-                  "
-                >
-                  Danh sách sản phẩm
-                </a>
-              </li>
-              <li style="margin: 0.25rem 0">
-                <a
-                  href="phieunhap.html"
-                  style="
-                    display: block;
-                    padding: 0.5rem 0.75rem;
-                    color: white;
-                    border-radius: 0.375rem;
-                    text-decoration: none;
-                  "
-                >
-                  Quản lý nhập
-                </a>
-              </li>
-              <li style="margin: 0.25rem 0">
-                <a
-                  href="giaban.html"
-                  style="
-                    display: block;
-                    padding: 0.5rem 0.75rem;
-                    color: white;
-                    border-radius: 0.375rem;
-                    text-decoration: none;
-                  "
-                >
-                  Quản lý giá bán
-                </a>
-              </li>
-            </ul>
-          </li>
-
-          <!-- Quản lý đầu bếp có submenu -->
-          <li style="margin: 0.25rem 0">
-            <a
-              href="javascript:void(0);"
-              onclick="toggleSubMenu('chef-submenu', 'chef-arrow')"
-              style="
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                padding: 0.75rem 1rem;
-                color: white;
-                border-radius: 0.375rem;
-                text-decoration: none;
-              "
-            >
-              <span style="display: flex; align-items: center">
-                <i
-                  class="material-icons"
-                  style="font-size: 20px; margin-right: 10px"
-                  >table_view</i
-                >
-                Đầu bếp
-              </span>
-              <i
-                class="material-icons"
-                id="chef-arrow"
-                style="font-size: 18px; transition: transform 0.3s"
-                >expand_more</i
-              >
-            </a>
-
-            <ul
-              id="chef-submenu"
-              style="
-                list-style: none;
-                padding-left: 2rem;
-                margin: 0;
-                display: none;
-              "
-            >
-              <li style="margin: 0.25rem 0">
-                <a
-                  href="chef.html"
-                  style="
-                    display: block;
-                    padding: 0.5rem 0.75rem;
-                    color: white;
-                    border-radius: 0.375rem;
-                    text-decoration: none;
-                  "
-                >
-                  Danh sách đầu bếp
-                </a>
-              </li>
-              <li style="margin: 0.25rem 0">
-                <a
-                  href="salary.html"
-                  style="
-                    display: block;
-                    padding: 0.5rem 0.75rem;
-                    color: white;
-                    border-radius: 0.375rem;
-                    text-decoration: none;
-                  "
-                >
-                  Quản lý lương
-                </a>
-              </li>
-            </ul>
-          </li>
-
-          <!-- Nút Đăng xuất ngay dưới menu Đầu bếp -->
-          <li style="margin-top: 1rem; text-align: center">
-            <a
-              href="../index.html"
-              style="
-                display: flex;
-                align-items: center;
-                justify-content: left;
-                gap: 8px;
-                background: linear-gradient(195deg, #2b2825, #2b2825);
-                color: white;
-                padding: 0.625rem 1.5rem;
-                font-size: 0.875rem;
-                border-radius: 0.25rem;
-                text-decoration: none;
-                width: 80%;
-              "
-            >
-              <i class="material-icons" style="font-size: 18px">logout</i>
-              <span>Đăng xuất</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-
-      <div style="position: absolute; width: 100%; bottom: 0; padding: 1rem">
-        <a
-          href="../index.html"
-          style="
-            display: inline-block;
-            background: linear-gradient(195deg, #e88f2a, #e88f2a);
-            color: white;
-            padding: 0.625rem 1.5rem;
-            font-size: 0.875rem;
-            border-radius: 0.25rem;
-            text-decoration: none;
-            width: 100%;
-            text-align: center;
-          "
-          >Đăng xuất</a
-        >
-      </div>
+        <!-- Đăng xuất -->
+        <li style="text-align:left;">
+          <a href="../index.html" class="logout-btn">
+            <i class="material-icons">logout</i><span>Đăng xuất</span>
+          </a>
+        </li>
+      </ul>
     </aside>
 
     <!-- MAIN -->
     <main style="margin-left: 250px; min-height: 100vh; padding: 1.5rem">
-      <nav
-        style="
-          margin-bottom: 1.5rem;
-          padding: 0.75rem 1.5rem;
-          border-radius: 0.75rem;
-          box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-            0 2px 4px -1px rgba(0, 0, 0, 0.06);
-          background-color: white;
-        "
-      >
-        <ol style="list-style: none; margin: 0; padding: 0">
-          <li style="color: #2b2825; font-size: 1rem; font-weight: 600">
-            Quản lý khách hàng
-          </li>
-        </ol>
-      </nav>
-
+      <h1 style="margin-bottom: 1rem">Quản lý khách hàng</h1>
       <div>
         <table>
           <thead>
